--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h1>Mirror.me</h1>
+            <h1><%=message%></h1>
         </div>
     </div>
  
