--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 	<script>
-		var socket = io.connect('http://localhost:80');
+		var socket = io();
 		
 		(function($) {
 	          $(function() {
